# nlp-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/database/: models.py
app/models/: hf_loader.py
app/routers/: cache.py  health.py  history.py  nlp.py  rag.py
app/schemas/: requests.py  responses.py
app/services/: chroma_service.py  history_service.py  redis_service.py
app/tests/: test_api.py
